varnish/tests/fail/error_fn.stderr
error: No functions or objects found in this module
 --> tests/fail/error_fn.rs:1:1
  |
1 | #[varnish::vmod]
  | ^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `varnish::vmod` (in Nightly builds, run with -Z macro-backtrace for more info)

error: Only public functions and impl blocks are allowed inside a `mod` tagged with `#[varnish::vmod]`. Add `pub` or move this function outside of this mod.
 --> tests/fail/error_fn.rs:6:5
  |
6 |     fn non_public() {}
  |     ^^

error: async functions are not supported
 --> tests/fail/error_fn.rs:7:9
  |
7 |     pub async fn async_fn() {}
  |         ^^^^^

error: unsafe functions are not supported
 --> tests/fail/error_fn.rs:8:9
  |
8 |     pub unsafe fn unsafe_fn() {}
  |         ^^^^^^

error: No functions or objects found in this module
 --> tests/fail/error_fn.rs:4:1
  |
4 | #[varnish::vmod]
  | ^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `varnish::vmod` (in Nightly builds, run with -Z macro-backtrace for more info)
